# AI_Powered_Construction_Project_Management_Platform.

./: .gitignore  README.md  main.py  pyproject.toml  replit.nix
data/: labor_force_training.csv  project_timeline_training.csv  resource_training.csv  risk_training.csv  supply_chain_training.csv  work_assignments_training.csv
examples/: ai_model_usage.py
pages/: ai_models_demo.py  project_input.py  project_monitoring.py  resource_management.py  risk_analysis.py  safety_monitoring.py  supply_chain.py  task_management.py
utils/: ai_helpers.py  ai_models.py  data_generator.py  ml_models.py
