[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.45.2",
    "numpy>=2.2.3",
    "openai>=1.63.2",
    "opencv-python-headless>=4.11.0.86",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "scikit-learn>=1.6.1",
    "streamlit>=1.42.1",
    "tensorflow-cpu>=2.14.0",
    "twilio>=9.4.5",
]
